# hashcrackr

./: .gitignore  README.md  pyproject.toml
hashcrackr/: cli.py  core.py  logger.py  utils.py
