[project]
name = "hashcrackr"
version = "0.1.0"
description = "CLI-Tool zum Brute-Forcen von Hashes"
authors = [
    {name = "Dein Name", email = "deine@email.de"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "rich",
    "rich-click"
]

[project.scripts]
hashcrackr = "hashcrackr.cli:cli"

[tool.setuptools]
packages = ["hashcrackr"]  # <–– Das ist der Trick!

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
